--- a/index.html
+++ b/index.html
@@ -25,26 +25,44 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-sm-3">
+
+        <div class="col-sm-3 text-center">
           <h3>Projects</h3>
-          <p>Automated Class Sign-up</p> 
-          <p>Animal as a Service</p>
-          <p>Super Hackathoner</p>
+          <a href="#">
+            <p>Automated Class Sign-up</p>
+          </a>
+          <a href="#">
+            <p>Animal as a Service</p>
+          </a>
+          <a href="#">
+            <p>Super Hackathoner</p>
+          </a>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 text-center">
           <h3>Skills</h3>
-          <p>Python - primary language</p>
-          <p>C++ - coursework language</p>
-          <p>HTML/CSS/Javascript</p>
-          <p>click for more</p>
+          <h4>Front End</h4>
+          <p>HTML ∘ CSS ∘ Javascript ∘ Bootstrap </p>
+          <h4>Back End</h4>
+          <p> Flask ∘ Node.js ∘ Express.js ∘ AWS </p>
+          <h4>Database</h4>
+          <p> MongoDB ∘ SQL ∘ SQLAlchemy </p>
+          <h4>Other</h4>
+          <p>Python ∘ C++ ∘ Git ∘ Docker</p>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 text-center">
           <h3>Work</h3>
-          <p>Resume</p>
-          <p>GitHub</p>
-          <p>LinkedIn</p>
+          <a href="#">
+            <p>Resume</p>
+          </a>
+          <a href="#">
+            <p>GitHub</p>
+          </a>
+          <a href="#">
+            <p>LinkedIn</p>
+          </a>
+
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 text-center">
           <h3>Contact</h3>
           <p>I respond to "Hey Yahir"</p>
           <p>(512) 992-8437</p>
