--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Yahir Bravo</title>
+    <title>The Best Site</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -16,11 +16,13 @@
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+
+    <link rel="icon" href="images/favicon.ico">
 </head>
   <body>
     <div class="jumbotron text-center">
       <h1>Yahir Bravo</h1>
-      <p>Constant Builder - Avid Entrepreneur - Workaholic</p>
+      <p>Daily Hacker - Optimistic Entrepeneur - Adventure Seeker</p>
     </div>
 
     <div class="container">
@@ -31,7 +33,7 @@
           <a href="#">
             <p>Automated Class Sign-up</p>
           </a>
-          <a href="#">
+          <a href="https://github.com/yahirb/Animal-as-a-Service">
             <p>Animal as a Service</p>
           </a>
           <a href="#">
@@ -75,6 +77,7 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </body>
 </html>
