added icons next to projects

--- a/index.html
+++ b/index.html
@@ -8,39 +8,43 @@
     <title>The Best Site</title>
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 
     <!-- Custom Styling -->
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="css/animate.css">
 
     <!-- Font -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,400" rel="stylesheet">
 
     <link rel="icon" href="images/favicon.ico">
-</head>
+  </head>
   <body>
     <div class="jumbotron text-center">
-      <h1>Yahir Bravo</h1>
+      <h1 class ="animated bounceInDown">Yahir Bravo</h1>
       <p>Daily Hacker - Optimistic Entrepeneur - Adventure Seeker</p>
     </div>
 
-    <div class="container">
+    <div class="container animated fadeInUp">
       <div class="row">
 
-        <div class="col-sm-3 text-center">
+        <div class="col-sm-3">
           <h3>Projects</h3>
+          <img src="images/autoclass.png" height="16" width="16"alt="">
           <a href="#">
             <p>Automated Class Sign-up</p>
           </a>
+          <img src="images/dog.png" height="16" width="16"alt="">
           <a href="https://github.com/yahirb/Animal-as-a-Service">
             <p>Animal as a Service</p>
           </a>
+          <img src="images/superhero.png" height="16" width="16"alt="">
           <a href="#">
             <p>Super Hackathoner</p>
           </a>
         </div>
-        <div class="col-sm-3 text-center">
+        <div class="col-sm-3">
           <h3>Skills</h3>
           <h4>Front End</h4>
           <p>HTML ∘ CSS ∘ Javascript ∘ Bootstrap </p>
@@ -51,24 +55,23 @@
           <h4>Other</h4>
           <p>Python ∘ C++ ∘ Git ∘ Docker</p>
         </div>
-        <div class="col-sm-3 text-center">
+        <div class="col-sm-3 " id="work">
           <h3>Work</h3>
-          <a href="#">
+          <a href="documents/resume.pdf" target="pdf-frame">
             <p>Resume</p>
           </a>
-          <a href="#">
+          <a href="https://github.com/yahirb" target="_blank">
             <p>GitHub</p>
           </a>
-          <a href="#">
+          <a href="https://www.linkedin.com/in/yahir-bravo/" target="_blank">
             <p>LinkedIn</p>
           </a>
 
         </div>
-        <div class="col-sm-3 text-center">
+        <div class="col-sm-3">
           <h3>Contact</h3>
-          <p>I respond to "Hey Yahir"</p>
-          <p>(512) 992-8437</p>
           <p>yahirb@gmail.com</p>
+          <p>(512) 992-8437</p>
           <p>Austin, TX</p>
         </div>
       </div>
