icon spacing, resume update, link updates

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
 
         <div class="col-sm-3">
           <h3>Projects</h3>
-          <img src="images/autoclass.png" height="16" width="16"alt="">
-          <a href="#">
+          <img class="icon" src="images/autoclass.png" height="16" width="16"alt="">
+          <a href="https://github.com/yahirb/">
             <p>Automated Class Sign-up</p>
           </a>
-          <img src="images/dog.png" height="16" width="16"alt="">
+          <img class="icon" src="images/dog.png" height="16" width="16"alt="">
           <a href="https://github.com/yahirb/Animal-as-a-Service">
             <p>Animal as a Service</p>
           </a>
-          <img src="images/superhero.png" height="16" width="16"alt="">
-          <a href="#">
+          <img class="icon" src="images/superhero.png" height="16" width="16"alt="">
+          <a href="https://github.com/yahirb/SuperHackathoner">
             <p>Super Hackathoner</p>
           </a>
         </div>
@@ -57,7 +57,7 @@
         </div>
         <div class="col-sm-3 " id="work">
           <h3>Work</h3>
-          <a href="documents/resume.pdf" target="pdf-frame">
+          <a href="documents/Bravo-Yahir-Resume.pdf" target="pdf-frame">
             <p>Resume</p>
           </a>
           <a href="https://github.com/yahirb" target="_blank">
