updated resume and personal description

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>The Best Site</title>
+    <title>Yahir Bravo</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -23,7 +23,7 @@
   <body>
     <div class="jumbotron text-center">
       <h1 class ="animated bounceInDown">Yahir Bravo</h1>
-      <p>Daily Hacker - Optimistic Entrepeneur - Adventure Seeker</p>
+      <p>Full Stack Developer - Project Lover - Design Oriented</p>
     </div>
 
     <div class="container animated fadeInUp">
@@ -31,39 +31,39 @@
 
         <div class="col-sm-3">
           <h3>Projects</h3>
-          <img class="icon" src="images/autoclass.png" height="16" width="16"alt="">
-          <a href="https://github.com/yahirb/">
+          <img class="icon" src="images/surfer-icon.png" height="16" width="16"alt="">
+          <a href="">
             <p>Automated Class Sign-up</p>
           </a>
-          <img class="icon" src="images/dog.png" height="16" width="16"alt="">
-          <a href="https://github.com/yahirb/Animal-as-a-Service">
-            <p>Animal as a Service</p>
+          <img class="icon" src="images/autoclass.png" height="16" width="16"alt="">
+          <a href="">
+            <p>Tap Tap Game</p>
           </a>
           <img class="icon" src="images/superhero.png" height="16" width="16"alt="">
-          <a href="https://github.com/yahirb/SuperHackathoner">
+          <a href="">
             <p>Super Hackathoner</p>
           </a>
         </div>
         <div class="col-sm-3">
           <h3>Skills</h3>
-          <h4>Front End</h4>
-          <p>HTML ∘ CSS ∘ Javascript ∘ Bootstrap </p>
-          <h4>Back End</h4>
-          <p> Flask ∘ Node.js ∘ Express.js ∘ AWS </p>
+          <h4>Programming Languages</h4>
+          <p>Python ∘ C++ ∘ JavaScript</p>
+          <h4>Web Frameworks</h4>
+          <p> Flask ∘ Node.js ∘ Express.js ∘ React </p>
           <h4>Database</h4>
-          <p> MongoDB ∘ SQL ∘ SQLAlchemy </p>
-          <h4>Other</h4>
-          <p>Python ∘ C++ ∘ Git ∘ Docker</p>
+          <p> MongoDB ∘ MySQL ∘ SQLAlchemy </p>
+          <h4>Tools:</h4>
+          <p>Git ∘ Docker ∘ AWS ∘ GCP ∘ Selenium ∘ REST APIs</p>
         </div>
         <div class="col-sm-3 " id="work">
           <h3>Work</h3>
           <a href="documents/Bravo-Yahir-Resume.pdf" target="pdf-frame">
             <p>Resume</p>
           </a>
-          <a href="https://github.com/yahirb" target="_blank">
+          <a href="" target="_blank">
             <p>GitHub</p>
           </a>
-          <a href="https://www.linkedin.com/in/yahir-bravo/" target="_blank">
+          <a href="" target="_blank">
             <p>LinkedIn</p>
           </a>
 
