--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
           <a href="documents/Bravo-Yahir-Resume.pdf" target="pdf-frame">
             <p>Resume</p>
           </a>
-          <a href="" target="_blank">
+          <a href="https://github.com/yahirb" target="_blank">
             <p>GitHub</p>
           </a>
-          <a href="" target="_blank">
+          <a href="https://www.linkedin.com/in/yahir-bravo/" target="_blank">
             <p>LinkedIn</p>
           </a>
 
